--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/akash-kumar-dodiyar-a52893232/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://twitter.com/Akash21806107">Twitter</a>
         <a class="footer-link" href="https://www.instagram.com/dodiyar_akashk/">Instagram</a>
         <p class="anchor">© 2023 Akash Dodiyar.</p>
       </div>
